--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/react": "^17.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "requestidlecallback": "^0.3.0"
   },
   "moduleDirectories": [
     "node_modules",
